02.Kubernetes/user-svc-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc-app-replicas
spec:
  replicas: 3
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: user-svc-app
      system: backend
  template:
    metadata:
      labels:
          app: user-svc-app
          system: backend
    spec:
      containers:
      - name: user-svc-app
        image: drmoz/userservice:v1
        ports:
          - containerPort: 80

        # to know when to restart a container
        livenessProbe:
          httpGet:
            port: 80
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2

        # to know when a container application has started
        readinessProbe:
          httpGet:
            port: 80
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5

        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: user-svc-app-secret
