02.Kubernetes/user-svc-mssqldb.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-svc-mssqldb-statefulset
spec:
  serviceName: user-svc-mssqldb
  replicas: 1
  selector:
    matchLabels:
      app: user-svc-mssqldb
      system: database
  template:
    metadata:
      labels:
        app: user-svc-mssqldb
        system: database
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: user-svc-mssqldb
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: user-svc-mssqldb-storage
          mountPath: /var/opt/mssql
      volumes:
        - name: user-svc-mssqldb-storage
          persistentVolumeClaim:
            claimName: user-svc-mssqldb-pv-claim
