02.Kubernetes/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-replicas
spec:
  replicas: 3
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: userservice
      system: backend
  template:
    metadata:
      labels:
          app: userservice
          system: backend
    spec:
      containers:
      - name: userservice
        image: drmoz/userservice:v1
        ports:
          - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true
      volumes:
      - name: secrets
        secret:
          secretName: secret-appsettings
