02.Kubernetes/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: userservice
    system: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
      nodePort: 30080
  type: NodePort
