02.Kubernetes/user-svc-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc-app
spec:
  selector:
    app: user-svc-app
    system: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
      nodePort: 30080
  type: NodePort
