02.Kubernetes/user-svc-mssqldb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc-mssqldb
spec:
  selector:
    app: user-svc-mssqldb
  ports:
    - port: 1433
      protocol: TCP
      targetPort: 1433
      nodePort: 31433
  type: LoadBalancer
