02.Kubernetes/user-svc-app.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-svc-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/IgorLopushko(/|$)(.*)
          backend:
            serviceName: user-svc-app
            servicePort: 8000
